--- a/views/404.ejs
+++ b/views/404.ejs
@@ -13,7 +13,11 @@
     </h1>
     <p>A hiba kódja: <%= error.status %>
     </p>
-    <a href="/">Főoldal</a>
+    <% if (error.status==422) { %>
+        <a href="/elelmiszer/feltoltes">Élelmiszer feltöltés</a>
+        <% } else { %>
+            <a href="/">Főoldal</a>
+            <% }%>
 </body>
 
 </html>
