--- a/views/egyElelmiszer.ejs
+++ b/views/egyElelmiszer.ejs
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Ruha</title>
+    <title>Egy elelmiszer megjelenítése</title>
 </head>
 
 <body>
@@ -32,26 +32,14 @@
             </li>
         </ul>
     </nav>
-    <h1>Ruha osztály</h1>
-    <a href="/ruha/feltoltes">Ruha feltöltés</a>
     <div class="container">
-        <% for (let i=0; i < robes.length; i++) { %>
-            <% if (i % 3==0) { %>
-                <div class="row bg-primary text-white m-3">
-                    <% } %>
-                        <div class="col-sm-4">
-                            <h1>Ruha neve: <%= robes[i].fajta %>
-                            </h1>
-                            <h4>Ruha leírása: <%= robes[i].leiras %>
-                            </h4>
-                            <p>Ruha ára: <%= robes[i].ar %> Ft
-                            </p>
-                            <img src="<%= robes[i].kep %>" alt="kep" class="w-100">
-                        </div>
-                        <% if (i % 3==2) { %>
-                </div>
-                <% } %>
-                    <% }%>
+        <h1>Kaja neve: <%= kaja.fajta %>
+        </h1>
+        <h2>Kaja leírása: <%= kaja.leiras %>
+        </h2>
+        <p>Kaja ára: <%= kaja.ar %> Ft
+        </p>
+        <img src="<%= kaja.kep %>" alt="kép">
     </div>
 </body>
 
