--- a/views/egyElelmiszer.ejs
+++ b/views/egyElelmiszer.ejs
@@ -41,6 +41,7 @@
         </p>
         <img src="<%= kaja.kep %>" alt="kép">
     </div>
+    <a href="/elelmiszer/modositas/<%= kaja.vonalkod %>">Változtatás</a>
 </body>
 
 </html>
