--- a/views/egyRuha.ejs
+++ b/views/egyRuha.ejs
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Élelmiszer</title>
+    <title>Egy ruha megjelenítése</title>
 </head>
 
 <body>
@@ -32,27 +32,14 @@
             </li>
         </ul>
     </nav>
-    <h1>Élelmiszer osztály</h1>
-    <a href="/elelmiszer/feltoltes">Élelmiszer feltöltés</a>
     <div class="container">
-        <% for (let i=0; i < foods.length; i++) { %>
-            <% if (i % 3==0) { %>
-                <div class="row bg-primary text-white m-3">
-                    <% } %>
-                        <div class="col-sm-4">
-                            <h1>Kaja neve: <%= foods[i].fajta %>
-                            </h1>
-                            <h4>Kaja leírása: <%= foods[i].leiras %>
-                            </h4>
-                            <p>Kaja ára: <%= foods[i].ar %> Ft
-                            </p>
-                            <img src="<%= foods[i].kep %>" alt="kep" class="w-100 h-50">
-                            <a href="/elelmiszer/<%= foods[i].vonalkod %>" class="text-white">Megjelenítés</a>
-                        </div>
-                        <% if (i % 3==2) { %>
-                </div>
-                <% } %>
-                    <% }%>
+        <h1>Kaja neve: <%= ruha.fajta %>
+        </h1>
+        <h2>Kaja leírása: <%= ruha.leiras %>
+        </h2>
+        <p>Kaja ára: <%= ruha.ar %> Ft
+        </p>
+        <img src="<%= ruha.kep %>" alt="kép">
     </div>
 </body>
 
