--- a/views/elelmiszerModosit.ejs
+++ b/views/elelmiszerModosit.ejs
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Élelmiszer</title>
+    <title>Élelmiszer feltöltés</title>
 </head>
 
 <body>
@@ -32,28 +32,30 @@
             </li>
         </ul>
     </nav>
-    <h1>Élelmiszer osztály</h1>
-    <a href="/elelmiszer/feltoltes">Élelmiszer feltöltés</a>
-    <div class="container">
-        <% for (let i=0; i < foods.length; i++) { %>
-            <% if (i % 3==0) { %>
-                <div class="row bg-primary text-white m-3">
-                    <% } %>
-                        <div class="col-sm-4">
-                            <h1>Kaja neve: <%= foods[i].fajta %>
-                            </h1>
-                            <h4>Kaja leírása: <%= foods[i].leiras %>
-                            </h4>
-                            <p>Kaja ára: <%= foods[i].ar %> Ft
-                            </p>
-                            <img src="<%= foods[i].kep %>" alt="kep" class="w-100 h-50">
-                            <a href="/elelmiszer/<%= foods[i].vonalkod %>" class="text-white">Megjelenítés</a>
-                        </div>
-                        <% if (i % 3==2) { %>
-                </div>
-                <% } %>
-                    <% }%>
-    </div>
+    <h1>Élelmiszer módosítás</h1>
+    <form action="/elelmiszer/feltoltes" method="POST">
+        <div class="form-group">
+            <label for="vonalkod">Vonalkód:</label>
+            <input type="text" class="form-control" id="vonalkod" placeholder="Vonalkód..." name="vonalkod">
+        </div>
+        <div class="form-group">
+            <label for="fajta">Fajta:</label>
+            <input type="text" class="form-control" id="fajta" placeholder="Élelmiszer fajtája..." name="fajta">
+        </div>
+        <div class="form-group">
+            <label for="leiras">Leírás:</label>
+            <input type="text" class="form-control" id="leiras" placeholder="Élelmiszer leírása..." name="leiras">
+        </div>
+        <div class="form-group">
+            <label for="ar">Ár:</label>
+            <input type="number" class="form-control" id="ar" placeholder="Élelmiszer ára..." name="ar">
+        </div>
+        <div class="form-group">
+            <label for="kep">Kép:</label>
+            <input type="text" class="form-control" id="kep" placeholder="Élelmiszer fényképe..." name="kep">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </body>
 
 </html>
