--- a/views/ruha.ejs
+++ b/views/ruha.ejs
@@ -46,7 +46,8 @@
                             </h4>
                             <p>Ruha ára: <%= robes[i].ar %> Ft
                             </p>
-                            <img src="<%= robes[i].kep %>" alt="kep" class="w-100">
+                            <img src="<%= robes[i].kep %>" alt="kep" class="w-100 h-50">
+                            <a href="/ruha/<%= robes[i].vonalkod %>" class="text-white">Megjelenítés</a>
                         </div>
                         <% if (i % 3==2) { %>
                 </div>
